apps/production/prometheus/patch-ingress-pushgateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-pushgateway
  namespace: prometheus
spec:
  tls:
    - hosts:
        - lia-prod.cloudist.solutions
      secretName: prometheus-tls-secret
  rules:
    - host: lia-prod.cloudist.solutions
      http:
        paths:
          - path: /push
            pathType: Prefix
            backend:
              service:
                name: prometheus-prometheus-pushgateway
                port:
                  number: 9091
