apps/production/prometheus/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
spec:
  tls:
    - hosts:
        - lia-prod.cloudist.solutions
      secretName: prometheus-tls-secret
  rules:
    - host: lia-prod.cloudist.solutions
      http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
